--- a/index.html
+++ b/index.html
@@ -45,19 +45,16 @@
       </div>
       <div>
         <label class="form-label">Confirm Password</label>
-        <input
-          class="form-control"
-          type="password"
-          id="password-confirm-input"
-        />
-        <div class="invalid-feedback">
-          Password mismatch or invalid password
-        </div>
+        <input class="form-control" type="password" id="password-confirm-input" />
+        <div class="invalid-feedback">Password mismatch or invalid password</div>
       </div>
 
       <div class="d-flex justify-content-end gap-2">
         <button id="submit-btn" class="btn btn-success my-2">Register</button>
+        <button id="reset-btn" class="btn btn-danger my-2">Reset</button>
       </div>
+     
+  
     </div>
   </body>
 </html>
